db-app-openstack.yml
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: internal-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-example-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-example
  template:
    metadata:
      labels:
        app: app-example
#      annotations:
#        vault.hashicorp.com/agent-inject: 'true'
#        #vault.hashicorp.com/role: "internal-app"
#        #vault.hashicorp.com/agent-inject-secret-database-config.txt: "secret/octavia"
#        #vault.hashicorp.com/service: "http://vault-cluster.vault.svc.cluster.local.:8200"
#        vault.hashicorp.com/agent-configmap: 'my-configmap'
    spec:
      containers:
        - name: app
          image: 'external/busybox:latest'
          command:
          - sleep
          - 100000s
          volumeMounts:
           - name: foo
             mountPath: "/etc/foo"
             readOnly: true
      volumes:
        - name: foo
          secret: 
            secretName: example-tls 
            items:
             - key: tls.crt
               path: tls.crt
      serviceAccountName: internal-app
